header complete and index HTML

--- a/resources/scss/base/_glider.scss
+++ b/resources/scss/base/_glider.scss
@@ -1,16 +1,20 @@
+@use 'base/variables' as v;
+@use 'base/mixins' as m;
+
 /////////////////////////////////////////////////////////
 // DEFAULTS SETTINGS
 /////////////////////////////////////////////////////////
 
 .glider-contain {
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   position: relative;
 }
 .glider {
   margin: 0 auto;
   position: relative;
-  overflow-y: hidden;
+  overflow: hidden;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: none;
   transform: translateZ(0);
@@ -38,9 +42,16 @@
 }
 .glider-slide {
   user-select: none;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-content: center;
   width: 100%;
+  padding: 5rem 2rem;
+  a {
+    margin: 0;
+    padding: 0;
+  }
 }
 .glider-slide img {
   max-width: 100%;
@@ -56,11 +67,11 @@
   background: none;
   padding: 0;
   z-index: 2;
-  font-size: 40px;
+  font-size: 4rem;
   text-decoration: none;
   left: -23px;
   border: 0;
-  top: 30%;
+  top: calc(50% - 2rem);
   cursor: pointer;
   color: #666;
   opacity: 1;
@@ -135,9 +146,88 @@
 // ADDITIONAL SETTINGS
 /////////////////////////////////////////////////////////
 
-.testt {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+.glider-slide-in {
+  width: 25rem;
+  height: 44.444rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  z-index: 0;
+  .glider-slide-in__image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .glider-slide-in__video {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 2;
+    video {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .glider-slide-in__content {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: baseline;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 3;
+    .glider-slide-in__content--text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      background-color: v.$white;
+      height: 17%;
+      width: 100%;
+      border-top: 1px solid gray;
+      border-bottom: 1px solid gray;
+      h2, p {
+        font-weight: 400;
+        margin: 0 0 0 1rem;
+        padding: 0;
+      }
+      h2 {
+        font-size: 2rem;
+        color: v.$black;
+      }
+      p {
+        margin-top: 1rem;
+        font-size: 1.3rem;
+        color: gray;
+      }
+    }
+  }
+  .glider-slide-in__button {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    background-color: transparent;
+  }
+}
+
+.glider-prev,
+.glider-next {
+  margin: 0;
+  padding: 0;
 }
