--- a/resources/scss/base/_globals.scss
+++ b/resources/scss/base/_globals.scss
@@ -1,51 +1,53 @@
 @use 'variables' as v;
 
 html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-    scroll-padding-top: 0rem;
+  font-size: 62.5%;
+  box-sizing: border-box;
+  scroll-padding-top: 0rem;
 }
 *, 
 *:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 body {
-    font-family: v.$main-font;
-    font-size: 1rem;
-
-    &.fijar-body {
-        overflow: hidden;
-    }
-    &.body-scroll {
-        padding-top: 8.6rem;
-    }
+  font-family: v.$main-font;
+  font-size: 1rem;
+  &.fijar-body {
+    overflow: hidden;
+  }
+  &.body-scroll {
+    padding-top: 8.6rem;
+  }
 }
 .container {
-    width: 95%;
-    max-width: 120rem;
-    margin: 0 auto;
+  width: 95%;
+  max-width: 120rem;
+  margin: 0 auto;
+}
+.display-none {
+  display: none !important;
 }
 p {
-    font-size: 2rem;
-    color: v.$black;
+  font-size: 2rem;
+  color: v.$black;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 h1, h2, h3 {
-    margin: 0;
+  margin: 0;
 }
 h1 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 h2 {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 h3 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 img {
-    width: 300px;
-    height: 300px;
+  width: 300px;
+  height: 300px;
 }
