--- a/resources/scss/layout/_header.scss
+++ b/resources/scss/layout/_header.scss
@@ -16,7 +16,7 @@
 		align-items: center;
 		flex-basis: 64rem;
 		height: auto;
-		.navigation__icon {
+		.navigation__logo {
 			margin: 0;
 			padding: 0;
 			display: flex;
