connect DB and contact section created

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
+/*
 .header {
 	padding: 3rem 7rem;
 	display: flex;
@@ -78,3 +79,4 @@
 		}
 	}
 }
+*/
